--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  pytest
+  pytest --cov=codecov
 after_success:
-  - codecov
+  - bash < (curl -s https://codecov.io/bash)
 branches:
   only:
     - master
