--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ python:
   - "3.8"
 install:
   - pip install -r requirements.txt
-  - pip install pytest-cov
+  - pip install codecov
   - pip3 install pyflakes
 
 script:
-  - pytest --cov=SDTLpy --cov-report=xml tests/
+  - coverage run tests.py
   - python3 -m pyflakes
 after_success:
-  - bash < (curl -s https://codecov.io/bash)
+  - codecov
