--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ install:
   - pip3 install pyflakes
 
 script:
-  - coverage run tests/test_SDTLResult.py tests/test_client.py
+  - python -m coverage run -m unittest discover
+#  - coverage run tests/test_SDTLResult.py tests/test_client.py
   - python3 -m pyflakes
 after_success:
   - codecov
