--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pip3 install pyflakes
 
 script:
-  - python -m coverage run -m unittest discover
+  - coverage run -m unittest discover
 #  - coverage run tests/test_SDTLResult.py tests/test_client.py
   - python3 -m pyflakes
 after_success:
